syntax = "proto3";

import "core.proto";
import "math.proto";
import "style.proto";

package xviz.v2.session;

message Start
{
    option (xviz_json_schema) = "session/start";
    
    string version = 1;

    string profile = 2;

    enum SessionType {
        session_type_not_set = 0;
        live = 1;
        log = 2;
        unbuffered_log = 3;
    }

    SessionType session_type = 3;

    enum MessageFormat {
        message_format_not_set = 0;
        json = 1;
        binary = 2;
    }
    
    MessageFormat message_format = 4;
}


message StateUpdate
{
    option (xviz_json_schema) = "session/state_update";    

    enum UpdateType
    {
        not_set = 0;
        snapshot = 1;
        incremental = 2;
    }

    UpdateType update_type = 1;

    repeated core.StreamSet updates = 2;
}

message Metadata
{
    option (xviz_json_schema) = "session/metadata";    

    string version = 1;

    map<string, StreamMetdata> streams = 2;

    map<string, CameraInfo> cameras = 3;

    map<string, string> stream_aliases = 4;

    map<string, UIPanelInfo> ui_config = 5;
}


message StreamMetadata
{
    option (xviz_json_schema) = "session/stream_metadata";    

    string source = 1;

    string units = 2;
    
    enum Category
    {
        category_not_set = 0;
        annotation = 1;
        future_instance = 2;
        pose = 3;
        primitive = 4;
        time_series = 5;
        variable = 6;
    }

    Category category = 3;

    enum PrimitiveType
    {
        primitive_type_not_set = 0;
        circle = 1;
        image = 2;
        point = 3;
        polygon = 4;
        polyline = 5;
        stadium = 6;
        text = 7;
    }
    
    PrimitiveType type = 4;

    style.StreamValue stream_style = 5;

    repeated style.Class style_classes = 6;
    
    enum CoordinateType
    {
        NOT_SET = 0;
        GEOGRAPHIC = 1;
        IDENTITY = 2;
    }

    CoordinateType coordinate = 7;
}


message CameraInfo
{
    option (xviz_json_schema) = "session/camera_info";    

    double human_name = 1;

    double source = 2;

    math.Vector3 vehicle_position = 3;

    math.Matrix3 vehicle_orientation = 4;

    double pixel_width = 5;

    double pixel_height = 6;

    math.Matrix3 rectification_projection = 7;

    math.Matrix4 gl_projection = 8;
}


message UIPanelInfo
{
    option (xviz_json_schema) = "session/ui_panel_info";

    string name = 1;

    repeated string needed_streams = 2;

    string config = 3;
}
